Update to version 2.1.8 + added item new broke check